# nchex

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: core.h  editor.h  fileio.h  ui.h
src/: editor.c  fileio.c  main.c  ui.c
